fixed header layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23053,6 +23053,7 @@ ol.commentlist li .star-rating {
 		margin-left: 5px;
 	}
 	.navbar-toggler {
-    	margin-top: 25px;
-  	}
+		margin-top: 25px;
+		margin-bottom: 10px;
+	}
 }
